--- a/src/hoteles/Hotel.css
+++ b/src/hoteles/Hotel.css
@@ -1,7 +1,6 @@
 *{
     padding: 0;
-    margin: 0;
-    
+    margin: 0;   
 }
 
 .total{
@@ -19,11 +18,16 @@
     width: 297px;
     height: 55px;
     display: flex;
+    border: 2px solid #F2F2F2;
+    border-radius: 15px;
+  
+   
 }
    
 .pais{
     width: 138px;
-    height: 55px;
+    border: none;
+    border-radius: 15px; 
 }
 
 .personas{
@@ -31,17 +35,37 @@
     width: 159px;
     height: 55px;
 }
+
+.cant-per{
+    width: 106px;
+    border: 1px solid #F2F2F2;  
+}
+
+.botoncito{
+    width: 53px;
+    border: none;
+    background-color: white;
+    border-radius: 15px;
+}
+
 .contenedor-sec1{
     display: flex;
     justify-content: space-between;
-    margin: 50px;
-
-    
+    margin: 50px 70px 0px 70px; 
 }
 
-.titulo-conte{
-   margin-inline-start: 48px;
+.contenedor-sec2{
+    padding: 30px;
 }
+
+.tituprim{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 40px;
+   
+}
+
 
 .contenedor-cart{
     width: 100%;
