--- a/src/hoteles/Cartelera.css
+++ b/src/hoteles/Cartelera.css
@@ -1,14 +1,15 @@
 .cartelera{
-    background-color: var(background-color);
+    
     width: 395px;
     border-radius: 12px;
-    border: 2px solid brown;
+    border: 2px;
     padding: 5px;
 }
 
 .img{
     border-radius: 12px;
     width: 100%;
+    height: 269px;
 }
 
 .detalles{
@@ -36,6 +37,7 @@
     width: 50%;
     display: flex;
     justify-content: center;
+    gap: 3px;
 }
 
 .mini-detalle2{
@@ -47,6 +49,7 @@
 }
 
 .img1{
+    color: red;
     width: 15%;
     height: 15%;
 }
@@ -57,4 +60,24 @@
 
 .titulo1{
     margin: 0;
+    font-family: 'Mulish', sans-serif;
+    font-size: 16px;
+}
+
+.superhost{
+    font-family: 'Mulish', sans-serif;
+    font-size: 12px;
+    color: #4F4F4F;
+}
+
+.letra{
+    font-family: 'Mulish', sans-serif;
+    font-size: 14px;
+    color: #828282;
+}
+
+.rating{
+    font-family: 'Mulish', sans-serif;
+    font-size: 14px;
+    color: #4F4F4F;
 }
