--- a/src/hoteles/Cartelera.css
+++ b/src/hoteles/Cartelera.css
@@ -15,9 +15,9 @@
 .detalles{
     height: 50px;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    white-space: nowrap;
+    
    
 
 }
@@ -29,8 +29,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid #4F4F4F;
+    border: 2px solid #4F4F4F;
     border-radius: 15px;
+    font-family: 'Mulish', sans-serif;
+    font-size: 13px;
+    color: #4F4F4F;
 }
 
 .mini-detalle1{
@@ -65,9 +68,7 @@
 }
 
 .superhost{
-    font-family: 'Mulish', sans-serif;
-    font-size: 12px;
-    color: #4F4F4F;
+   
 }
 
 .letra{
